# tap-clockify

./: .gitignore  Dockerfile  MANIFEST.in  README.md  config.example.json  docker-entrypoint.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build-and-publish-to-pypi.yml  publish.yml  publish_package.yml  test_package.yml
old/tap_clockify/: __init__.py  runner.py  state.py
tap-clockify/: README.md
tap_clockify/: __init__.py  base.py  cache.py  client.py  config.py  runner.py  state.py  streams.py  tap.py
tap_clockify/schemas/: __init__.py  clients.json  clients.py  projects.json  projects.py  tasks.json  tasks.py  time_entries.json  time_entries.py  users.json  users.py  workspaces.json  workspaces.py
tap_clockify/streams/: __init__.py  base.py  cache.py  clients.py  projects.py  streams.py  tags.py  tasks.py  time_entries.py  users.py  workspaces.py
tap_clockify/tests/: __init__.py  test_core.py
