[tool.poetry]
name = "tap-clockify"
version = "1.0.7"
description = "Singer tap for Clockify, built with the Meltano SDK for Singer Taps."
authors = ["Stephen Bailey <stkbailey@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/immuta/tap-clockify"
keywords = [
    "singer",
    "elt",
    "replication"
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database"
]

[tool.poetry.dependencies]
python = "<3.10,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^>0.3.14"
black = "^21.7-beta.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-clockify = 'tap_clockify.tap:TapClockify.cli'

[tool.black]
line-length = 100
target-version = ['py38']
